# trackercv

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TrackingDataReceiver.cpp  TrackingDataReceiver.h  cmake_install.cmake  eyetracker-cv  main.cpp  mainwindow.cpp  mainwindow.h  opencvVideoPlayer.pro  trackercv.pro
eyetribe/GazeApiLib.dir/Debug/GazeApiLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GazeApiLib.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  lib.command.1.tlog
eyetribe/x64/Debug/GazeApiLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GazeApiLib.lastbuildstate  custombuild.write.1.tlog
